refactor: 불변리스트로 변경